# QAT-Zero

resnet/: LICENSE  clear.py  create_dir.py  distill_data.py  draw_box_utils.py  feature_qat.py  feature_qat_multi.py  my_dataset_coco.py  my_dataset_voc.py  plot_curve.py  predict.py  predict_ckpt.py  pyproject.toml  requirements.txt  train.py  train_multi_GPU.py  train_multi_gpu_faster_rcnn.py  validation.py  validation_faster.py
resnet/backbone/: LSQ.py  feature_pyramid_network.py  resnet50_fpn_model.py
resnet/network_files/: boxes.py  det_utils.py  faster_rcnn_framework.py  mask_rcnn.py  roi_head.py  rpn_function.py  transform.py
resnet/train_utils/: __init__.py  coco_eval.py  coco_utils.py  distributed_utils.py  group_by_aspect_ratio.py  kd_loss.py  kl_div.py  loggers.py  mse.py  train_eval_utils.py
vit/: LICENSE  pyproject.toml
vit/baseline/psaq/: README.md  generate_data.py
vit/configs/_base_/: default_runtime.py
vit/configs/datasets/: coco_128.py  coco_2048.py  generation.py  syn.py
vit/configs/mask_rcnn/: mask_rcnn_deit_base_fpn_3x_coco.py  mask_rcnn_deit_small_fpn_3x_coco.py  mask_rcnn_deit_tiny_fpn_3x_coco.py  swin-t_coco128.py  swin-t_coco2048.py
vit/mmcv_custom/: __init__.py  checkpoint.py  my_checkpoint.py
vit/mmdet_custom/: __init__.py  earlystop.py
vit/mmdet_custom/datasets/: coco_fraction.py  syn_data.py
vit/mmdet_custom/models/: quant_swin.py  quant_vit.py  vit.py  vit_baseline.py
vit/quant/: lsqplus.py  ptqops.py  qatops.py  quant_mode.py  quantize.py
vit/scripts/: README.md
vit/scripts/stage_one/: gen_s.sh  gen_s_8.sh  gen_t.sh  gen_t_8.sh
vit/tools/: annotate_model.py  download_models.py  generate_gauss.py  generation.py
vit/tools/config/: 128_qat.json  2048_qat.json  2048_qatkd.json  generation.json  qat_full.json  qat_full_deit.json  qat_syn.json
yolo11/: pyproject.toml
yolo11/data/: cocoonebox.yaml
yolo11/generation/: config.py  distill_trainer.py  fp_sampler.py  main.py  metrics.py  utils.py  v8_loss.py
yolo11/generation/config/: genlabel.json  relabel-syn.json  true_label.json
yolo11/label/: generate_one_label.py
yolo11/quant/: dist_kd.py  kd_loss.py  kd_mode.py  kl_div.py  lsqplus.py  module.py  mse.py  ptqops.py  qatops.py  quant_mode.py  quantize.py
yolo11/scripts/: README.md
(+83 files in other folders)
